--- a/signalR/Content/custom.css
+++ b/signalR/Content/custom.css
@@ -1,46 +1,75 @@
-﻿.noti-content{
-    position:fixed;
-    right:100px;
-    background:#e5e5e5;
-    border-radius:4px;
-    top:47px;
-    width:250px;
-    display:none;
-    border:1px solid #9E988B;
-
+﻿.noti-content {
+    position: fixed;
+    right: 100px;
+    background: #e5e5e5;
+    border-radius: 4px;
+    top: 47px;
+    width: 250px;
+    display: none;
+    border: 1px solid #9E988B;
 }
-ul#notiContent{
-    max-height:200px;
-    overflow:auto;
-    padding:0px;
-    margin:0px;
-    padding-left:20px;
 
+ul#notiContent {
+    max-height: 200px;
+    overflow: auto;
+    padding: 0px;
+    margin: 0px;
+    padding-left: 20px;
 }
-ul#notiContent li{
-    margin:3px;
-    padding:6px;
-    background:#fff;
 
-}
+    ul#notiContent li {
+        margin: 3px;
+        padding: 6px;
+        background: #fff;
+    }
+
 .noti-top-arrow {
-    border-color:transparent;
-    border-bottom-color:#F5DEB3;
-    border-style:dashed dashed solid;
-    border-width:0 8.5px 8.5px;
-    position:absolute;
-    right:32px;
-    top:-8px;
+    border-color: transparent;
+    border-bottom-color: #F5DEB3;
+    border-style: dashed dashed solid;
+    border-width: 0 8.5px 8.5px;
+    position: absolute;
+    right: 32px;
+    top: -8px;
 }
- span.noti{
-    color:#FF2323;
-    margin:15px;
-    position:fixed;
-    right:100px;
-    font-size:18px;
-    cursor:pointer;
+
+span.noti {
+    color: #FF2323;
+    margin: 15px;
+    position: fixed;
+    right: 100px;
+    font-size: 18px;
+    cursor: pointer;
 }
-span.count{
-    position:relative;
-    top:-3px;
+
+span.count {
+    position: relative;
+    top: -3px;
 }
+
+input:focus {
+    outline: none;
+    box-shadow: 0px 0px 0px transparent !important;
+}
+
+input {
+    outline: none;
+    box-shadow: 0px 0px 0px transparent !important;
+}
+
+.conv {
+    padding: 10px;
+    background-color: lightblue;
+    border-radius: 5px;
+    position: relative;
+}
+
+    .conv::before {
+        display: block;
+        border: 10px solid transparent;
+        border-right-color: lightblue;
+        position: absolute;
+        bottom: 5px;
+        left: -20px;
+        content: "";
+    }
